test javascript page added

--- a/Week1Folder/mpg/index.html
+++ b/Week1Folder/mpg/index.html
@@ -32,7 +32,7 @@
 
         document.write(html);
 
-        console.log(miles);
+        console.log(isNaN("B") && isNaN("A"));
       </script>
     </main>
   </body>
