--- a/Week2Folder/basicexample.html
+++ b/Week2Folder/basicexample.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="index.html" method="get">
+    <form action="basicexample.html" method="get">
         <input type="text" id="email_1" name="email_1">
         <input type="submit" id="join_list"
                value="Join List">
@@ -40,6 +40,6 @@
         
 
     </script>
-    <script src="index.js"></script>
+    <script src="basicexample.js"></script>
 </body>
 </html>
