--- a/Week2Folder/basicexample.html
+++ b/Week2Folder/basicexample.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>The Miles Per Gallon Calculator</h1>
+    <h1>Input Email</h1>
     <form action="basicexample.html" method="get" id="email_2">
         <input type="text" id="email_1" name="email_1">
         <input type="submit" id="join_list"
